# hotline

./: Cargo.toml  LICENSE  README.md  config.yaml
src/: audio_playback.rs  audio_utils.rs  client.rs  config.rs  display_transcript.rs  handle_events.rs  handle_server_event.rs  main.rs
