[package]
name = "hotline"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.2"
anyhow = "1.0"

# Websockets
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tungstenite = { version = "0.17" }
serde = { version = "1.0" }
serde_json = "1.0"
base64 = "0.22.1"
futures = "0.3"
bytes = "1.1"
crossbeam-channel = "0.5"
futures-util = "0.3"
url = "2.2"
rubato = "0.16"