[package]
name = "hotline"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tungstenite = { version = "0.17" }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
futures = "0.3"
bytes = "1.1"
crossbeam-channel = "0.5"
futures-util = "0.3"
url = "2.2"
crossterm = "0.28.1"
async-trait = "0.1"
uuid = { version = "1.10.0", features = ["v4"]}

ringbuf = "0.4.7"