[package]
name = "hotline"
version = "0.1.0"
edition = "2021"
authors = ["Eric Botti <ericjbotti@gmail.com>"]
license = "Apache-2.0"
description = "A terminal based client for realtime multimodal AI"
readme = "README.md"
homepage = "https://github.com/ercbot/hotline"
repository = "https://github.com/ercbot/hotline"


[dependencies]
cpal = "0.15.2"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
tungstenite = { version = "0.17" }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
futures = "0.3"
url = "2.2"
crossterm = "0.28.1"
uuid = { version = "1.10.0", features = ["v4"]}
config = { version = "0.14", features = ["yaml"] }
ringbuf = "0.4.7"
clap = { version = "4.5.20", features = ["derive"] }
